# smart_esprit

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  smart3.glade  smart3.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: AF.h  Agent_de_foyer.c  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dechets.txt  etudiants.txt  fonction.c  fonction.h  fonction2.c  header.h  interface.c  interface.c.bak  interface.h  interface.h.bak  mail.txt  menu.txt  reclamation.txt  smart3  source.c  stock.c  stock.h  stock.txt  util.txt
src/.deps/: Agent_de_foyer.Po  callbacks.Po  source.Po
